--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">Films Light</string>
+    <string name="title_movie">Popular movies</string>
+    <string name="edit_search">Enter the movie name</string>
+    <string name="pictures">Movies</string>
+    <string name="noOverview">No description available</string>
+    <string name="unknownRuntime">Unknown runtime</string>
+    <string name="unknown">Unknown</string>
+    <string name="h">h</string>
+    <string name="min">min</string>
+    <string name="actor">Actors</string>
+
+    <string name="budget">Budget: </string>
+    <string name="revenue">Revenue: </string>
+    <string name="rating">Rating: </string>
+    <string name="runtime">Runtime: </string>
+    <string name="releaseDate">Release year:</string>
+    <string name="country">Production country: </string>
+    <string name="credits">Credits</string>
+    <string name="genres" translatable="false">genres</string>
+    <string name="connection_lost">Connection lost</string>
+    <string name="try_exit">Click again to exit</string>
 </resources>
