--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Films Light</string>
     <string name="title_movie">Popular movies</string>
+    <string name="title_search">Search movies</string>
     <string name="edit_search">Enter the movie name</string>
     <string name="pictures">Movies</string>
     <string name="noOverview">No description available</string>
